annoying flickering solved

--- a/app/renderer/components/css/app.css
+++ b/app/renderer/components/css/app.css
@@ -5,7 +5,9 @@
 }
 
 body::-webkit-scrollbar,
-.noScroll::-webkit-scrollbar {
+.noScroll::-webkit-scrollbar,
+#input::-webkit-scrollbar,
+#autocomplete::-webkit-scrollbar {
   display: none;
 }
 
@@ -22,16 +24,15 @@ body {
 #input,
 #autocomplete {
   box-sizing: border-box;
-  padding: 18px 48px 18px 18px;
-  width: 100%;
-  height: 60px;
+  padding: 18px 44px 24px 18px;
+  width: 99%;
+  height: 66px;
   max-height: 300px;
   font-size: 18px;
   border: 0;
   background: none;
   resize: none;
   color: white;
-  margin-bottom: 6px;
 }
 
 #autocomplete {
